@@ -51,7 +51,7 @@
             title: 'Summarize',
             href: 'summarize/user/{{ user.id }}',
             region: 'top',
-            style: 'max-height:145px; width:100%; height:145px; padding: 0; background-color: #eeeeee;',
+            style: 'width:100%; height:145px; padding: 0; background-color: #eeeeee;',
             splitter: true
 
         });
